istioctl/pkg/auth/testdata/validator/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: vmhttp
spec:
  hosts:
    - vmhttp.default.svc.cluster.local
  ports:
    - number: 8080
      name: http
      protocol: HTTP
